--- a/app/src/main/res/layout/fragment_coupons_item.xml
+++ b/app/src/main/res/layout/fragment_coupons_item.xml
@@ -26,7 +26,7 @@
             android:textSize="30sp" />
 
         <TextView
-            android:id="@+id/descriptionTextView"
+            android:id="@+id/titleTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView"
