completed tab2 malls (lab2 version)

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -26,7 +26,11 @@
         android:id="@+id/mallsFragment"
         android:name="comp4097.comp.hkbu.edu.hk.couponredemption.ui.malls.MallsFragment"
         android:label="Malls"
-        tools:layout="@layout/fragment_malls_list" />
+        tools:layout="@layout/fragment_malls_list" >
+        <action
+            android:id="@+id/action_mallsFragment_self"
+            app:destination="@id/mallsFragment" />
+    </fragment>
     <fragment
         android:id="@+id/couponsListFragment"
         android:name="comp4097.comp.hkbu.edu.hk.couponredemption.ui.coupons.CouponsListFragment"
