--- a/app/src/main/res/layout/fragment_coupon_details.xml
+++ b/app/src/main/res/layout/fragment_coupon_details.xml
@@ -4,8 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".CouponDetails" >
+    android:layout_height="wrap_content"
+    tools:context=".CouponDetails"
+    android:paddingBottom="?actionBarSize"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,7 +20,7 @@
         <ImageView
             android:id="@+id/couponImageView2"
             android:layout_width="411dp"
-            android:layout_height="287dp"
+            android:layout_height="190dp"
             android:layout_marginBottom="30dp"
             android:scaleType="centerCrop"
             tools:src="@tools:sample/backgrounds/scenic" />
@@ -39,7 +41,7 @@
                 android:textSize="30sp" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/detailsTextView3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TextView"
