--- a/app/src/main/res/layout/fragment_coupon_details.xml
+++ b/app/src/main/res/layout/fragment_coupon_details.xml
@@ -77,7 +77,7 @@
                     android:textSize="20sp" />
 
                 <TextView
-                    android:id="@+id/quotaTextView"
+                    android:id="@+id/coinsTextView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
