--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -16,6 +16,11 @@
         android:icon="@android:drawable/gallery_thumb"
         android:title="@string/coins" />
 
+    <item
+        android:id="@+id/profileListFragment"
+        android:icon="@android:drawable/ic_input_get"
+        android:title="@string/profile" />
+
 <!--    <item-->
 <!--        android:id="@+id/navigation_dashboard"-->
 <!--        android:icon="@drawable/ic_dashboard_black_24dp"-->
