--- a/app/src/main/res/layout/fragment_custom_login.xml
+++ b/app/src/main/res/layout/fragment_custom_login.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="Password"
-        android:inputType="text|textPassword"
+        android:inputType="textPassword"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -27,7 +27,7 @@
         android:layout_marginTop="208dp"
         android:ems="10"
         android:hint="User Account"
-        android:inputType="textShortMessage"
+        android:inputType="text"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
